# StraterBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT BRIEF md.md  ablation.py  bt.py  changelog.txt  chart.py  deploy.sh  docker-compose.yml  main.py  portfolio.py  pyproject.toml  regime_sweep.py
decisions/: 2026-06-18-phase2-code-review-hardening.md  2026-07-08-reconciliation-pending-fill.md
src/trading_system/: config.py  logging_setup.py  sizing.py
src/trading_system/backtest/: metrics.py  runner.py  strategy.py
src/trading_system/data/: alpaca_adapter.py  yfinance_adapter.py
src/trading_system/executor/: alpaca_executor.py
src/trading_system/monitor/: position_monitor.py
src/trading_system/notifier/: bot.py
src/trading_system/rules/: engine.py  indicators.py
src/trading_system/safety/: heartbeat.py  kill_switch.py  reconciliation.py
src/trading_system/scanner/: job.py
src/trading_system/store/: db.py  models.py
tests/: conftest.py
tests/integration/: test_backtest_pipeline.py
tests/unit/: test_config.py  test_executor.py  test_kill_switch.py  test_logging.py  test_reconciliation.py  test_signals_command.py  test_sizing.py  test_store.py
tests/unit/backtest/: test_metrics.py  test_runner.py  test_yfinance_adapter.py
tests/unit/rules/: test_engine.py  test_indicators.py
