[project]
name = "trading-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.20.0",
    "yfinance>=0.2.40",
    "pandas-ta>=0.3.14b",
    "backtesting>=0.3.3",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "scipy>=1.12.0",
    "plotly>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require network)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_system"]
